--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ img.me { border-radius: 95px; position: relative; right: 8px; top: 104px; }
 div.footer { padding-top: 20px; }
 body, html { height: 100%; }
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus { background-color: transparent; }
+.social-media-buttons { opacity: 0; }
 
 /*-------------------------------*/
 
