--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ img.me { border-radius: 95px; position: relative; right: 8px; top: 104px; }
 .about-me-text { margin-top: 37px; }
 div.footer { padding-top: 20px; }
 body, html { height: 100%; }
+div.social-media-buttons { padding: 0px; }
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus { background-color: transparent; }
 .social-media-buttons { opacity: 0; }
 
