--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,8 @@ li.sidebar-brand a { padding-top: 11px; }
 .tooltip { height: 80px; width: 200px; box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .15) }
 .blog-header h2 { letter-spacing: 2px; font-size: 50px; color: white; margin-top: 50px;}
 .blog-header { background-color: steelblue; }
-.blog-title ul li { font-size: 20px; }
-.blog-title ul li a { text-decoration: none }
-.blog-title div.cdac { background-color: white; height: 80px; }
+.blog-title div.blogs a { text-decoration: none; position: relative; top: 27px }
+.blog-title div.blogs { background-color: white; height: 80px; }
 /*@media only screen and (max-width: 800px) {
   
   .links-div {
