adding text to talks & rewards section

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ div.social-media-buttons{padding:0px;}
 a:hover{text-decoration:none;}
 .rewards-div div{border:1px solid gainsboro;background:white;height:244px;cursor:pointer;border-radius:5px;box-shadow:9px 9px 9px gainsboro; margin-left: 20px;}
 blockquote { font-size: 16.5px; }
+._51mw { display: none; }
 /*-------------------------------*/
 
 /*           Wrappers            */
