--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body,html{height:100%;}
 div.social-media-buttons{padding:0px;}
 .nav .open > a,.nav .open > a:hover,.nav .open > a:focus{background-color:transparent;}
 .social-media-buttons{opacity:0;}
-.talk-images{height:187px;width:194px;position:relative;left:25px;top:17px;}
+.talk-images{height:187px;width:194px;position:relative;left:30px;top:20px;}
 .caption{position:relative;top:26px;text-decoration:none;color:black;left:28px;}
 a:hover{text-decoration:none;}
 .rewards-div div{border:1px solid gainsboro;background:white;height:244px;cursor:pointer;border-radius:5px;box-shadow:9px 9px 9px gainsboro; margin-left: 20px;}
@@ -119,6 +119,6 @@ li.sidebar-brand a{padding-top:11px;}
 .overlay{position:fixed;display:none;width:100%;height:100%;top:0;left:0;right:0;bottom:0;background-color:rgba(250,250,250,.8);z-index:1;}
 .tooltip{height:80px;width:200px;box-shadow:2px 2px 6px 2px rgba(0,0,0,.15)}
 .blog-header h2{letter-spacing:2px;font-size:50px;color:white;margin-top:50px;}
-.blog-header{background-color:steelblue;}
+.blog-header{background: url('../images/kernels-header.png');}
 .blog-title div.blogs a{text-decoration:none;position:relative;top:27px}
 .blog-title div.blogs{background-color:white;height:80px;}
