--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,12 @@
-/* Medium devices (desktops, 992px and up) */
-
-/*@media only screen and (max-width : 1200px) {
-  
-}
-
-
- Large devices (large desktops, 1200px and up) 
-@media only screen and (min-width : 1200px) {
-*/
 @font-face{font-family:raleway;src:url(fonts/Roboto/Roboto-Regular.ttf) format("truetype");font-size:12px;}
+/* tag based css */
 body{font-family:raleway;background-image:url('../images/body-background.jpg');position:relative;overflow-x:hidden;}
+body,html{height:100%;}
+a:hover{text-decoration:none;}
+blockquote { font-size: 16.5px; }
+figure img { display: block; margin: 0 auto;}
+
+/* class based css */
 .contact-me img{height:50px;width:50px;}
 .back-to-top{margin:0;position:fixed;bottom:15px;right:5px;z-index:100;display:none;text-decoration:none;text-decoration:none;color:black;}
 .copyright{margin-top:10px;}
@@ -30,21 +27,13 @@ body{font-family:raleway;background-image:url('../images/body-background.jpg');p
 .about-me-heading h2{position:relative;top:31px;}
 .skill-heading h2,.rewards-heading h2{position:relative;top:13px;}
 .contact-me-heading h2{position:relative;top:10px;}
-img.me{border-radius:95px;position:relative;right:8px;}
+.me{border-radius:95px;position:relative;right:8px;}
+.figure-caption{text-align: center;}
 .about-me-text{margin-top:37px;}
-div.footer{padding-top:20px;}
-body,html{height:100%;}
+.footer{padding-top:20px;}
 .nav .open > a,.nav .open > a:hover,.nav .open > a:focus{background-color:transparent;}
 .talk-images{height:187px;width:194px;position:relative;left:30px;top:20px;}
 .caption{position:relative;top:26px;text-decoration:none;color:black;left:28px;}
-a:hover{text-decoration:none;}
-blockquote { font-size: 16.5px; }
-/*-------------------------------*/
-
-/*           Wrappers            */
-
-/*-------------------------------*/
-
 #wrapper{padding-left:0;-webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;-o-transition:all 0.5s ease;transition:all 0.5s ease;}
 #wrapper.toggled{padding-left:220px;}
 #sidebar-wrapper{z-index:1000;left:220px;width:0;height:100%;margin-left:-220px;overflow-y:auto;overflow-x:hidden;background:#1a1a1a;-webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;-o-transition:all 0.5s ease;transition:all 0.5s ease;}
@@ -52,13 +41,6 @@ blockquote { font-size: 16.5px; }
 #wrapper.toggled #sidebar-wrapper{width:220px;}
 #page-content-wrapper{width:100%;padding-top:24px;}
 #wrapper.toggled #page-content-wrapper{position:absolute;margin-right:-220px;}
-
-/*-------------------------------*/
-
-/*     Sidebar nav styles        */
-
-/*-------------------------------*/
-
 .sidebar-nav{position:absolute;top:0;width:220px;margin:0;padding:0;list-style:none;}
 .sidebar-nav li{position:relative;line-height:20px;display:inline-block;width:100%;padding-bottom:20px;}
 .sidebar-nav li:before{content:'';position:absolute;top:0;left:0;z-index:-1;height:100%;width:3px;background-color:#1c1c1c;-webkit-transition:width .2s ease-in;-moz-transition:width .2s ease-in;-ms-transition:width .2s ease-in;transition:width .2s ease-in;}
@@ -78,13 +60,6 @@ li.sidebar-brand a{padding-top:11px;}
 .sidebar-nav li a:hover,.sidebar-nav li a:active,.sidebar-nav li a:focus,.sidebar-nav li.open a:hover,.sidebar-nav li.open a:active,.sidebar-nav li.open a:focus{color:#fff;text-decoration:none;background-color:transparent;}
 .sidebar-nav > .sidebar-brand{height:65px;font-size:20px;line-height:44px;}
 .sidebar-nav .dropdown-menu{position:relative;width:100%;padding:0;margin:0;border-radius:0;border:none;background-color:#222;box-shadow:none;}
-
-/*-------------------------------*/
-
-/*       Hamburger-Cross         */
-
-/*-------------------------------*/
-
 .hamburger{position:fixed;top:20px;z-index:999;display:block;width:32px;height:32px;margin-left:15px;background:transparent;border:none;}
 .hamburger:hover,.hamburger:focus,.hamburger:active{outline:none;}
 .hamburger.is-closed:before{content:'';display:block;width:100px;font-size:14px;color:#fff;line-height:32px;text-align:center;opacity:0;-webkit-transform:translate3d(0,0,0);-webkit-transition:all .35s ease-in-out;}
@@ -103,13 +78,6 @@ li.sidebar-brand a{padding-top:11px;}
 .hamburger.is-open .hamb-bottom{-webkit-transform:rotate(-45deg);-webkit-transition:-webkit-transform .2s cubic-bezier(.73,1,.28,.08);}
 .hamburger.is-open:before{content:'';display:block;width:100px;font-size:14px;color:#fff;line-height:32px;text-align:center;opacity:0;-webkit-transform:translate3d(0,0,0);-webkit-transition:all .35s ease-in-out;}
 .hamburger.is-open:hover:before{opacity:1;display:block;-webkit-transform:translate3d(-100px,0,0);-webkit-transition:all .35s ease-in-out;}
-
-/*-------------------------------*/
-
-/*            Overlay            */
-
-/*-------------------------------*/
-
 .overlay{position:fixed;display:none;width:100%;height:100%;top:0;left:0;right:0;bottom:0;background-color:rgba(250,250,250,.8);z-index:1;}
 .tooltip{height:80px;width:200px;box-shadow:2px 2px 6px 2px rgba(0,0,0,.15)}
 .blog-link a { font-size: 20px; text-decoration: none}
