--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,7 +32,7 @@ figure img { display: block; margin: 0 auto;}
 .about-me-text{margin-top:37px;}
 .footer{padding-top:20px;}
 .nav .open > a,.nav .open > a:hover,.nav .open > a:focus{background-color:transparent;}
-.talk-images{height:187px;width:194px;position:relative;left:30px;top:20px;}
+.talk-images{height:187px;width:194px;}
 .caption{position:relative;top:26px;text-decoration:none;color:black;left:28px;}
 #wrapper{padding-left:0;-webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;-o-transition:all 0.5s ease;transition:all 0.5s ease;}
 #wrapper.toggled{padding-left:220px;}
